--- a/HTML.html
+++ b/HTML.html
@@ -15,7 +15,22 @@ Café Younes retails high quality coffee that is freshly roasted and ground on p
 Café Younes introduced its coffee shop line in 2008. In our multiple retail outlets in Lebanon, you can enjoy a cozy break of soothing drinks, a high quality range of homemade desserts, pastries, salads and gourmet sandwiches and burgers along with specialty teas and juices.
     
 </div>            
-
+<h2>
+    Branches
+</h2>
+<table border="2px">
+<tr>
+    <th>Hamra</th>
+    <th>Achrafieh</th>
+</tr>
+<tr>
+    <td>After more than 12 years, our original Hamra coffee shop has relocated to a 1950s Beirut house on Baalbek Street. With a beautiful hidden garden in the middle of Beirut, this location offers its visitors a greener and calmer setting, and a live coffee roasting experience.</td>
+    <td>Perfectly located on a corner of one of Beirut's busiest streets, this typical neighborhood coffee shop offers an extensive range of premium quality coffee. Guests get to enjoy the aroma of freshly roasted coffee and a wide variety of food and desserts while relaxing on the sidewalk, the bar or the cozy terrasse. Afterwich, customers can take home one of the many coffee single origins or signature blends.</td>
+</tr>
+<tr>
+    <td><img alt="CYAchrafieh" src="C:\Users\Elias\Desktop\Blog\Assets\Pictures\CYAchrafieh.webp"></td>
+    <td><img alt="CYHamra"src="C:\Users\Elias\Desktop\Blog\Assets\Pictures\CYHamra.webp"></td>
+</tr>
 
 </body>
 </html>
