Adding Table with Pictures

--- a/HTML.html
+++ b/HTML.html
@@ -28,8 +28,8 @@ Café Younes introduced its coffee shop line in 2008. In our multiple retail out
     <td>Perfectly located on a corner of one of Beirut's busiest streets, this typical neighborhood coffee shop offers an extensive range of premium quality coffee. Guests get to enjoy the aroma of freshly roasted coffee and a wide variety of food and desserts while relaxing on the sidewalk, the bar or the cozy terrasse. Afterwich, customers can take home one of the many coffee single origins or signature blends.</td>
 </tr>
 <tr>
-    <td><img alt="CYAchrafieh" src="C:\Users\Elias\Desktop\Blog\Assets\Pictures\CYAchrafieh.webp"></td>
-    <td><img alt="CYHamra"src="C:\Users\Elias\Desktop\Blog\Assets\Pictures\CYHamra.webp"></td>
+    <td><img alt="CYAchrafieh" src="C:\Users\Elias\Desktop\SEFactory\Blog-Assignments\CYAchrafieh.webp"></td>
+    <td><img alt="CYHamra"src="C:\Users\Elias\Desktop\SEFactory\Blog-Assignments\CYHamra.webp"></td>
 </tr>
 
 </body>
